update XmlParser, use entities instead of DTOs