@@ -1,7 +1,5 @@
 package ru.nsu.timetable.models.mappers;
 
-import java.util.stream.Collectors;
-
 import org.springframework.stereotype.Component;
 import ru.nsu.timetable.models.dto.TimetableDTO;
 import ru.nsu.timetable.models.entities.Timetable;
@@ -15,20 +13,14 @@ public class TimetableMapper {
     }
 
     public TimetableDTO toTimetableDTO(Timetable timetable) {
-        return new TimetableDTO(timetable.getId(),
+        return new TimetableDTO(
+                timetable.getId(),
                 timetable.getEvents().stream()
-                        .map(eventMapper::toEventDTO)
-                        .collect(Collectors.toList()));
-    }
-
-    public Timetable toTimetable(TimetableDTO timetableDTO) {
-        Timetable timetable = new Timetable();
-        timetable.setId(timetableDTO.id());
-        timetable.setEvents(
-                timetableDTO.events().stream()
-                        .map(eventMapper::toEvent)
-                        .collect(Collectors.toList())
+                        .map(event -> {
+                            System.out.println("Processing event: " + event.getId());
+                            return eventMapper.toEventDTO(event);
+                        })
+                        .toList()
         );
-        return timetable;
     }
 }
